DSL-ply/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> contexto
Rule 1     contexto -> deffuncao
Rule 2     contexto -> bloco
Rule 3     contexto -> empty
Rule 4     bloco -> linha ENDLINE bloco
Rule 5     bloco -> linha
Rule 6     linha -> funcao
Rule 7     linha -> if
Rule 8     linha -> while
Rule 9     linha -> return
Rule 10    linha -> var_assign
Rule 11    linha -> expression
Rule 12    return -> RETURN term COMMA return
Rule 13    return -> RETURN term
Rule 14    funcao -> NAME LPAR values RPAR
Rule 15    values -> NAME COMMA values
Rule 16    values -> NUMBER COMMA values
Rule 17    values -> NUMBER
Rule 18    values -> NAME
Rule 19    deffuncao -> DEF NAME LPAR args RPAR LCHAVES bloco RCHAVES
Rule 20    args -> NAME COMMA args
Rule 21    args -> NAME
Rule 22    expression -> term
Rule 23    if -> IF LPAR bloco RPAR LCHAVES bloco RCHAVES
Rule 24    while -> WHILE LPAR bloco RPAR LCHAVES bloco RCHAVES
Rule 25    var_assign -> NAME EQUALS term
Rule 26    var_assign -> NAME EQUALS funcao
Rule 27    term -> term EXPONENT term
Rule 28    term -> term MULTIPLY term
Rule 29    term -> term DIVIDE term
Rule 30    term -> term DIVIDEINT term
Rule 31    term -> term QUOTIENT term
Rule 32    term -> term MINUS term
Rule 33    term -> term PLUS term
Rule 34    term -> term IGUAL term
Rule 35    term -> term MENOR term
Rule 36    term -> term MAIOR term
Rule 37    term -> term MENORIGUAL term
Rule 38    term -> term MAIORIGUAL term
Rule 39    term -> factor
Rule 40    factor -> nterm
Rule 41    factor -> NUMBER
Rule 42    factor -> positive
Rule 43    factor -> negative
Rule 44    negative -> MINUS term
Rule 45    positive -> PLUS term
Rule 46    nterm -> LPAR term RPAR
Rule 47    term -> NAME
Rule 48    empty -> <empty>

Terminals, with rules where they appear

COMMA                : 12 15 16 20
DEF                  : 19
DIVIDE               : 29
DIVIDEINT            : 30
ENDLINE              : 4
EQUALS               : 25 26
EXPONENT             : 27
IF                   : 23
IGUAL                : 34
LCHAVES              : 19 23 24
LPAR                 : 14 19 23 24 46
MAIOR                : 36
MAIORIGUAL           : 38
MENOR                : 35
MENORIGUAL           : 37
MINUS                : 32 44
MULTIPLY             : 28
NAME                 : 14 15 18 19 20 21 25 26 47
NUMBER               : 16 17 41
PLUS                 : 33 45
QUOTIENT             : 31
RCHAVES              : 19 23 24
RETURN               : 12 13
RPAR                 : 14 19 23 24 46
WHILE                : 24
error                : 

Nonterminals, with rules where they appear

args                 : 19 20
bloco                : 2 4 19 23 23 24 24
contexto             : 0
deffuncao            : 1
empty                : 3
expression           : 11
factor               : 39
funcao               : 6 26
if                   : 7
linha                : 4 5
negative             : 43
nterm                : 40
positive             : 42
return               : 9 12
term                 : 12 13 22 25 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 44 45 46
values               : 14 15 16
var_assign           : 10
while                : 8

Parsing method: LALR

state 0

    (0) S' -> . contexto
    (1) contexto -> . deffuncao
    (2) contexto -> . bloco
    (3) contexto -> . empty
    (19) deffuncao -> . DEF NAME LPAR args RPAR LCHAVES bloco RCHAVES
    (4) bloco -> . linha ENDLINE bloco
    (5) bloco -> . linha
    (48) empty -> .
    (6) linha -> . funcao
    (7) linha -> . if
    (8) linha -> . while
    (9) linha -> . return
    (10) linha -> . var_assign
    (11) linha -> . expression
    (14) funcao -> . NAME LPAR values RPAR
    (23) if -> . IF LPAR bloco RPAR LCHAVES bloco RCHAVES
    (24) while -> . WHILE LPAR bloco RPAR LCHAVES bloco RCHAVES
    (12) return -> . RETURN term COMMA return
    (13) return -> . RETURN term
    (25) var_assign -> . NAME EQUALS term
    (26) var_assign -> . NAME EQUALS funcao
    (22) expression -> . term
    (27) term -> . term EXPONENT term
    (28) term -> . term MULTIPLY term
    (29) term -> . term DIVIDE term
    (30) term -> . term DIVIDEINT term
    (31) term -> . term QUOTIENT term
    (32) term -> . term MINUS term
    (33) term -> . term PLUS term
    (34) term -> . term IGUAL term
    (35) term -> . term MENOR term
    (36) term -> . term MAIOR term
    (37) term -> . term MENORIGUAL term
    (38) term -> . term MAIORIGUAL term
    (39) term -> . factor
    (47) term -> . NAME
    (40) factor -> . nterm
    (41) factor -> . NUMBER
    (42) factor -> . positive
    (43) factor -> . negative
    (46) nterm -> . LPAR term RPAR
    (45) positive -> . PLUS term
    (44) negative -> . MINUS term

    DEF             shift and go to state 5
    $end            reduce using rule 48 (empty -> .)
    NAME            shift and go to state 6
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    NUMBER          shift and go to state 23
    LPAR            shift and go to state 7
    PLUS            shift and go to state 20
    MINUS           shift and go to state 19

    contexto                       shift and go to state 1
    deffuncao                      shift and go to state 2
    bloco                          shift and go to state 3
    empty                          shift and go to state 4
    linha                          shift and go to state 8
    funcao                         shift and go to state 9
    if                             shift and go to state 10
    while                          shift and go to state 11
    return                         shift and go to state 12
    var_assign                     shift and go to state 13
    expression                     shift and go to state 14
    term                           shift and go to state 18
    factor                         shift and go to state 21
    nterm                          shift and go to state 22
    positive                       shift and go to state 24
    negative                       shift and go to state 25

state 1

    (0) S' -> contexto .



state 2

    (1) contexto -> deffuncao .

    $end            reduce using rule 1 (contexto -> deffuncao .)


state 3

    (2) contexto -> bloco .

    $end            reduce using rule 2 (contexto -> bloco .)


state 4

    (3) contexto -> empty .

    $end            reduce using rule 3 (contexto -> empty .)


state 5

    (19) deffuncao -> DEF . NAME LPAR args RPAR LCHAVES bloco RCHAVES

    NAME            shift and go to state 26


state 6

    (14) funcao -> NAME . LPAR values RPAR
    (25) var_assign -> NAME . EQUALS term
    (26) var_assign -> NAME . EQUALS funcao
    (47) term -> NAME .

    LPAR            shift and go to state 27
    EQUALS          shift and go to state 28
    EXPONENT        reduce using rule 47 (term -> NAME .)
    MULTIPLY        reduce using rule 47 (term -> NAME .)
    DIVIDE          reduce using rule 47 (term -> NAME .)
    DIVIDEINT       reduce using rule 47 (term -> NAME .)
    QUOTIENT        reduce using rule 47 (term -> NAME .)
    MINUS           reduce using rule 47 (term -> NAME .)
    PLUS            reduce using rule 47 (term -> NAME .)
    IGUAL           reduce using rule 47 (term -> NAME .)
    MENOR           reduce using rule 47 (term -> NAME .)
    MAIOR           reduce using rule 47 (term -> NAME .)
    MENORIGUAL      reduce using rule 47 (term -> NAME .)
    MAIORIGUAL      reduce using rule 47 (term -> NAME .)
    ENDLINE         reduce using rule 47 (term -> NAME .)
    $end            reduce using rule 47 (term -> NAME .)
    RPAR            reduce using rule 47 (term -> NAME .)
    RCHAVES         reduce using rule 47 (term -> NAME .)


state 7

    (46) nterm -> LPAR . term RPAR
    (27) term -> . term EXPONENT term
    (28) term -> . term MULTIPLY term
    (29) term -> . term DIVIDE term
    (30) term -> . term DIVIDEINT term
    (31) term -> . term QUOTIENT term
    (32) term -> . term MINUS term
    (33) term -> . term PLUS term
    (34) term -> . term IGUAL term
    (35) term -> . term MENOR term
    (36) term -> . term MAIOR term
    (37) term -> . term MENORIGUAL term
    (38) term -> . term MAIORIGUAL term
    (39) term -> . factor
    (47) term -> . NAME
    (40) factor -> . nterm
    (41) factor -> . NUMBER
    (42) factor -> . positive
    (43) factor -> . negative
    (46) nterm -> . LPAR term RPAR
    (45) positive -> . PLUS term
    (44) negative -> . MINUS term

    NAME            shift and go to state 30
    NUMBER          shift and go to state 23
    LPAR            shift and go to state 7
    PLUS            shift and go to state 20
    MINUS           shift and go to state 19

    term                           shift and go to state 29
    factor                         shift and go to state 21
    nterm                          shift and go to state 22
    positive                       shift and go to state 24
    negative                       shift and go to state 25

state 8

    (4) bloco -> linha . ENDLINE bloco
    (5) bloco -> linha .

    ENDLINE         shift and go to state 31
    $end            reduce using rule 5 (bloco -> linha .)
    RPAR            reduce using rule 5 (bloco -> linha .)
    RCHAVES         reduce using rule 5 (bloco -> linha .)


state 9

    (6) linha -> funcao .

    ENDLINE         reduce using rule 6 (linha -> funcao .)
    $end            reduce using rule 6 (linha -> funcao .)
    RPAR            reduce using rule 6 (linha -> funcao .)
    RCHAVES         reduce using rule 6 (linha -> funcao .)


state 10

    (7) linha -> if .

    ENDLINE         reduce using rule 7 (linha -> if .)
    $end            reduce using rule 7 (linha -> if .)
    RPAR            reduce using rule 7 (linha -> if .)
    RCHAVES         reduce using rule 7 (linha -> if .)


state 11

    (8) linha -> while .

    ENDLINE         reduce using rule 8 (linha -> while .)
    $end            reduce using rule 8 (linha -> while .)
    RPAR            reduce using rule 8 (linha -> while .)
    RCHAVES         reduce using rule 8 (linha -> while .)


state 12

    (9) linha -> return .

    ENDLINE         reduce using rule 9 (linha -> return .)
    $end            reduce using rule 9 (linha -> return .)
    RPAR            reduce using rule 9 (linha -> return .)
    RCHAVES         reduce using rule 9 (linha -> return .)


state 13

    (10) linha -> var_assign .

    ENDLINE         reduce using rule 10 (linha -> var_assign .)
    $end            reduce using rule 10 (linha -> var_assign .)
    RPAR            reduce using rule 10 (linha -> var_assign .)
    RCHAVES         reduce using rule 10 (linha -> var_assign .)


state 14

    (11) linha -> expression .

    ENDLINE         reduce using rule 11 (linha -> expression .)
    $end            reduce using rule 11 (linha -> expression .)
    RPAR            reduce using rule 11 (linha -> expression .)
    RCHAVES         reduce using rule 11 (linha -> expression .)


state 15

    (23) if -> IF . LPAR bloco RPAR LCHAVES bloco RCHAVES

    LPAR            shift and go to state 32


state 16

    (24) while -> WHILE . LPAR bloco RPAR LCHAVES bloco RCHAVES

    LPAR            shift and go to state 33


state 17

    (12) return -> RETURN . term COMMA return
    (13) return -> RETURN . term
    (27) term -> . term EXPONENT term
    (28) term -> . term MULTIPLY term
    (29) term -> . term DIVIDE term
    (30) term -> . term DIVIDEINT term
    (31) term -> . term QUOTIENT term
    (32) term -> . term MINUS term
    (33) term -> . term PLUS term
    (34) term -> . term IGUAL term
    (35) term -> . term MENOR term
    (36) term -> . term MAIOR term
    (37) term -> . term MENORIGUAL term
    (38) term -> . term MAIORIGUAL term
    (39) term -> . factor
    (47) term -> . NAME
    (40) factor -> . nterm
    (41) factor -> . NUMBER
    (42) factor -> . positive
    (43) factor -> . negative
    (46) nterm -> . LPAR term RPAR
    (45) positive -> . PLUS term
    (44) negative -> . MINUS term

    NAME            shift and go to state 30
    NUMBER          shift and go to state 23
    LPAR            shift and go to state 7
    PLUS            shift and go to state 20
    MINUS           shift and go to state 19

    term                           shift and go to state 34
    factor                         shift and go to state 21
    nterm                          shift and go to state 22
    positive                       shift and go to state 24
    negative                       shift and go to state 25

state 18

    (22) expression -> term .
    (27) term -> term . EXPONENT term
    (28) term -> term . MULTIPLY term
    (29) term -> term . DIVIDE term
    (30) term -> term . DIVIDEINT term
    (31) term -> term . QUOTIENT term
    (32) term -> term . MINUS term
    (33) term -> term . PLUS term
    (34) term -> term . IGUAL term
    (35) term -> term . MENOR term
    (36) term -> term . MAIOR term
    (37) term -> term . MENORIGUAL term
    (38) term -> term . MAIORIGUAL term

    ENDLINE         reduce using rule 22 (expression -> term .)
    $end            reduce using rule 22 (expression -> term .)
    RPAR            reduce using rule 22 (expression -> term .)
    RCHAVES         reduce using rule 22 (expression -> term .)
    EXPONENT        shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    DIVIDEINT       shift and go to state 38
    QUOTIENT        shift and go to state 39
    MINUS           shift and go to state 40
    PLUS            shift and go to state 41
    IGUAL           shift and go to state 42
    MENOR           shift and go to state 43
    MAIOR           shift and go to state 44
    MENORIGUAL      shift and go to state 45
    MAIORIGUAL      shift and go to state 46


state 19

    (44) negative -> MINUS . term
    (27) term -> . term EXPONENT term
    (28) term -> . term MULTIPLY term
    (29) term -> . term DIVIDE term
    (30) term -> . term DIVIDEINT term
    (31) term -> . term QUOTIENT term
    (32) term -> . term MINUS term
    (33) term -> . term PLUS term
    (34) term -> . term IGUAL term
    (35) term -> . term MENOR term
    (36) term -> . term MAIOR term
    (37) term -> . term MENORIGUAL term
    (38) term -> . term MAIORIGUAL term
    (39) term -> . factor
    (47) term -> . NAME
    (40) factor -> . nterm
    (41) factor -> . NUMBER
    (42) factor -> . positive
    (43) factor -> . negative
    (46) nterm -> . LPAR term RPAR
    (45) positive -> . PLUS term
    (44) negative -> . MINUS term

    NAME            shift and go to state 30
    NUMBER          shift and go to state 23
    LPAR            shift and go to state 7
    PLUS            shift and go to state 20
    MINUS           shift and go to state 19

    term                           shift and go to state 47
    factor                         shift and go to state 21
    nterm                          shift and go to state 22
    positive                       shift and go to state 24
    negative                       shift and go to state 25

state 20

    (45) positive -> PLUS . term
    (27) term -> . term EXPONENT term
    (28) term -> . term MULTIPLY term
    (29) term -> . term DIVIDE term
    (30) term -> . term DIVIDEINT term
    (31) term -> . term QUOTIENT term
    (32) term -> . term MINUS term
    (33) term -> . term PLUS term
    (34) term -> . term IGUAL term
    (35) term -> . term MENOR term
    (36) term -> . term MAIOR term
    (37) term -> . term MENORIGUAL term
    (38) term -> . term MAIORIGUAL term
    (39) term -> . factor
    (47) term -> . NAME
    (40) factor -> . nterm
    (41) factor -> . NUMBER
    (42) factor -> . positive
    (43) factor -> . negative
    (46) nterm -> . LPAR term RPAR
    (45) positive -> . PLUS term
    (44) negative -> . MINUS term

    NAME            shift and go to state 30
    NUMBER          shift and go to state 23
    LPAR            shift and go to state 7
    PLUS            shift and go to state 20
    MINUS           shift and go to state 19

    term                           shift and go to state 48
    factor                         shift and go to state 21
    nterm                          shift and go to state 22
    positive                       shift and go to state 24
    negative                       shift and go to state 25

state 21

    (39) term -> factor .

    EXPONENT        reduce using rule 39 (term -> factor .)
    MULTIPLY        reduce using rule 39 (term -> factor .)
    DIVIDE          reduce using rule 39 (term -> factor .)
    DIVIDEINT       reduce using rule 39 (term -> factor .)
    QUOTIENT        reduce using rule 39 (term -> factor .)
    MINUS           reduce using rule 39 (term -> factor .)
    PLUS            reduce using rule 39 (term -> factor .)
    IGUAL           reduce using rule 39 (term -> factor .)
    MENOR           reduce using rule 39 (term -> factor .)
    MAIOR           reduce using rule 39 (term -> factor .)
    MENORIGUAL      reduce using rule 39 (term -> factor .)
    MAIORIGUAL      reduce using rule 39 (term -> factor .)
    ENDLINE         reduce using rule 39 (term -> factor .)
    $end            reduce using rule 39 (term -> factor .)
    RPAR            reduce using rule 39 (term -> factor .)
    COMMA           reduce using rule 39 (term -> factor .)
    RCHAVES         reduce using rule 39 (term -> factor .)


state 22

    (40) factor -> nterm .

    EXPONENT        reduce using rule 40 (factor -> nterm .)
    MULTIPLY        reduce using rule 40 (factor -> nterm .)
    DIVIDE          reduce using rule 40 (factor -> nterm .)
    DIVIDEINT       reduce using rule 40 (factor -> nterm .)
    QUOTIENT        reduce using rule 40 (factor -> nterm .)
    MINUS           reduce using rule 40 (factor -> nterm .)
    PLUS            reduce using rule 40 (factor -> nterm .)
    IGUAL           reduce using rule 40 (factor -> nterm .)
    MENOR           reduce using rule 40 (factor -> nterm .)
    MAIOR           reduce using rule 40 (factor -> nterm .)
    MENORIGUAL      reduce using rule 40 (factor -> nterm .)
    MAIORIGUAL      reduce using rule 40 (factor -> nterm .)
    ENDLINE         reduce using rule 40 (factor -> nterm .)
    $end            reduce using rule 40 (factor -> nterm .)
    RPAR            reduce using rule 40 (factor -> nterm .)
    COMMA           reduce using rule 40 (factor -> nterm .)
    RCHAVES         reduce using rule 40 (factor -> nterm .)


state 23

    (41) factor -> NUMBER .

    EXPONENT        reduce using rule 41 (factor -> NUMBER .)
    MULTIPLY        reduce using rule 41 (factor -> NUMBER .)
    DIVIDE          reduce using rule 41 (factor -> NUMBER .)
    DIVIDEINT       reduce using rule 41 (factor -> NUMBER .)
    QUOTIENT        reduce using rule 41 (factor -> NUMBER .)
    MINUS           reduce using rule 41 (factor -> NUMBER .)
    PLUS            reduce using rule 41 (factor -> NUMBER .)
    IGUAL           reduce using rule 41 (factor -> NUMBER .)
    MENOR           reduce using rule 41 (factor -> NUMBER .)
    MAIOR           reduce using rule 41 (factor -> NUMBER .)
    MENORIGUAL      reduce using rule 41 (factor -> NUMBER .)
    MAIORIGUAL      reduce using rule 41 (factor -> NUMBER .)
    ENDLINE         reduce using rule 41 (factor -> NUMBER .)
    $end            reduce using rule 41 (factor -> NUMBER .)
    RPAR            reduce using rule 41 (factor -> NUMBER .)
    COMMA           reduce using rule 41 (factor -> NUMBER .)
    RCHAVES         reduce using rule 41 (factor -> NUMBER .)


state 24

    (42) factor -> positive .

    EXPONENT        reduce using rule 42 (factor -> positive .)
    MULTIPLY        reduce using rule 42 (factor -> positive .)
    DIVIDE          reduce using rule 42 (factor -> positive .)
    DIVIDEINT       reduce using rule 42 (factor -> positive .)
    QUOTIENT        reduce using rule 42 (factor -> positive .)
    MINUS           reduce using rule 42 (factor -> positive .)
    PLUS            reduce using rule 42 (factor -> positive .)
    IGUAL           reduce using rule 42 (factor -> positive .)
    MENOR           reduce using rule 42 (factor -> positive .)
    MAIOR           reduce using rule 42 (factor -> positive .)
    MENORIGUAL      reduce using rule 42 (factor -> positive .)
    MAIORIGUAL      reduce using rule 42 (factor -> positive .)
    ENDLINE         reduce using rule 42 (factor -> positive .)
    $end            reduce using rule 42 (factor -> positive .)
    RPAR            reduce using rule 42 (factor -> positive .)
    COMMA           reduce using rule 42 (factor -> positive .)
    RCHAVES         reduce using rule 42 (factor -> positive .)


state 25

    (43) factor -> negative .

    EXPONENT        reduce using rule 43 (factor -> negative .)
    MULTIPLY        reduce using rule 43 (factor -> negative .)
    DIVIDE          reduce using rule 43 (factor -> negative .)
    DIVIDEINT       reduce using rule 43 (factor -> negative .)
    QUOTIENT        reduce using rule 43 (factor -> negative .)
    MINUS           reduce using rule 43 (factor -> negative .)
    PLUS            reduce using rule 43 (factor -> negative .)
    IGUAL           reduce using rule 43 (factor -> negative .)
    MENOR           reduce using rule 43 (factor -> negative .)
    MAIOR           reduce using rule 43 (factor -> negative .)
    MENORIGUAL      reduce using rule 43 (factor -> negative .)
    MAIORIGUAL      reduce using rule 43 (factor -> negative .)
    ENDLINE         reduce using rule 43 (factor -> negative .)
    $end            reduce using rule 43 (factor -> negative .)
    RPAR            reduce using rule 43 (factor -> negative .)
    COMMA           reduce using rule 43 (factor -> negative .)
    RCHAVES         reduce using rule 43 (factor -> negative .)


state 26

    (19) deffuncao -> DEF NAME . LPAR args RPAR LCHAVES bloco RCHAVES

    LPAR            shift and go to state 49


state 27

    (14) funcao -> NAME LPAR . values RPAR
    (15) values -> . NAME COMMA values
    (16) values -> . NUMBER COMMA values
    (17) values -> . NUMBER
    (18) values -> . NAME

    NAME            shift and go to state 50
    NUMBER          shift and go to state 52

    values                         shift and go to state 51

state 28

    (25) var_assign -> NAME EQUALS . term
    (26) var_assign -> NAME EQUALS . funcao
    (27) term -> . term EXPONENT term
    (28) term -> . term MULTIPLY term
    (29) term -> . term DIVIDE term
    (30) term -> . term DIVIDEINT term
    (31) term -> . term QUOTIENT term
    (32) term -> . term MINUS term
    (33) term -> . term PLUS term
    (34) term -> . term IGUAL term
    (35) term -> . term MENOR term
    (36) term -> . term MAIOR term
    (37) term -> . term MENORIGUAL term
    (38) term -> . term MAIORIGUAL term
    (39) term -> . factor
    (47) term -> . NAME
    (14) funcao -> . NAME LPAR values RPAR
    (40) factor -> . nterm
    (41) factor -> . NUMBER
    (42) factor -> . positive
    (43) factor -> . negative
    (46) nterm -> . LPAR term RPAR
    (45) positive -> . PLUS term
    (44) negative -> . MINUS term

    NAME            shift and go to state 53
    NUMBER          shift and go to state 23
    LPAR            shift and go to state 7
    PLUS            shift and go to state 20
    MINUS           shift and go to state 19

    term                           shift and go to state 54
    funcao                         shift and go to state 55
    factor                         shift and go to state 21
    nterm                          shift and go to state 22
    positive                       shift and go to state 24
    negative                       shift and go to state 25

state 29

    (46) nterm -> LPAR term . RPAR
    (27) term -> term . EXPONENT term
    (28) term -> term . MULTIPLY term
    (29) term -> term . DIVIDE term
    (30) term -> term . DIVIDEINT term
    (31) term -> term . QUOTIENT term
    (32) term -> term . MINUS term
    (33) term -> term . PLUS term
    (34) term -> term . IGUAL term
    (35) term -> term . MENOR term
    (36) term -> term . MAIOR term
    (37) term -> term . MENORIGUAL term
    (38) term -> term . MAIORIGUAL term

    RPAR            shift and go to state 56
    EXPONENT        shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    DIVIDEINT       shift and go to state 38
    QUOTIENT        shift and go to state 39
    MINUS           shift and go to state 40
    PLUS            shift and go to state 41
    IGUAL           shift and go to state 42
    MENOR           shift and go to state 43
    MAIOR           shift and go to state 44
    MENORIGUAL      shift and go to state 45
    MAIORIGUAL      shift and go to state 46


state 30

    (47) term -> NAME .

    RPAR            reduce using rule 47 (term -> NAME .)
    EXPONENT        reduce using rule 47 (term -> NAME .)
    MULTIPLY        reduce using rule 47 (term -> NAME .)
    DIVIDE          reduce using rule 47 (term -> NAME .)
    DIVIDEINT       reduce using rule 47 (term -> NAME .)
    QUOTIENT        reduce using rule 47 (term -> NAME .)
    MINUS           reduce using rule 47 (term -> NAME .)
    PLUS            reduce using rule 47 (term -> NAME .)
    IGUAL           reduce using rule 47 (term -> NAME .)
    MENOR           reduce using rule 47 (term -> NAME .)
    MAIOR           reduce using rule 47 (term -> NAME .)
    MENORIGUAL      reduce using rule 47 (term -> NAME .)
    MAIORIGUAL      reduce using rule 47 (term -> NAME .)
    COMMA           reduce using rule 47 (term -> NAME .)
    ENDLINE         reduce using rule 47 (term -> NAME .)
    $end            reduce using rule 47 (term -> NAME .)
    RCHAVES         reduce using rule 47 (term -> NAME .)


state 31

    (4) bloco -> linha ENDLINE . bloco
    (4) bloco -> . linha ENDLINE bloco
    (5) bloco -> . linha
    (6) linha -> . funcao
    (7) linha -> . if
    (8) linha -> . while
    (9) linha -> . return
    (10) linha -> . var_assign
    (11) linha -> . expression
    (14) funcao -> . NAME LPAR values RPAR
    (23) if -> . IF LPAR bloco RPAR LCHAVES bloco RCHAVES
    (24) while -> . WHILE LPAR bloco RPAR LCHAVES bloco RCHAVES
    (12) return -> . RETURN term COMMA return
    (13) return -> . RETURN term
    (25) var_assign -> . NAME EQUALS term
    (26) var_assign -> . NAME EQUALS funcao
    (22) expression -> . term
    (27) term -> . term EXPONENT term
    (28) term -> . term MULTIPLY term
    (29) term -> . term DIVIDE term
    (30) term -> . term DIVIDEINT term
    (31) term -> . term QUOTIENT term
    (32) term -> . term MINUS term
    (33) term -> . term PLUS term
    (34) term -> . term IGUAL term
    (35) term -> . term MENOR term
    (36) term -> . term MAIOR term
    (37) term -> . term MENORIGUAL term
    (38) term -> . term MAIORIGUAL term
    (39) term -> . factor
    (47) term -> . NAME
    (40) factor -> . nterm
    (41) factor -> . NUMBER
    (42) factor -> . positive
    (43) factor -> . negative
    (46) nterm -> . LPAR term RPAR
    (45) positive -> . PLUS term
    (44) negative -> . MINUS term

    NAME            shift and go to state 6
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    NUMBER          shift and go to state 23
    LPAR            shift and go to state 7
    PLUS            shift and go to state 20
    MINUS           shift and go to state 19

    linha                          shift and go to state 8
    bloco                          shift and go to state 57
    funcao                         shift and go to state 9
    if                             shift and go to state 10
    while                          shift and go to state 11
    return                         shift and go to state 12
    var_assign                     shift and go to state 13
    expression                     shift and go to state 14
    term                           shift and go to state 18
    factor                         shift and go to state 21
    nterm                          shift and go to state 22
    positive                       shift and go to state 24
    negative                       shift and go to state 25

state 32

    (23) if -> IF LPAR . bloco RPAR LCHAVES bloco RCHAVES
    (4) bloco -> . linha ENDLINE bloco
    (5) bloco -> . linha
    (6) linha -> . funcao
    (7) linha -> . if
    (8) linha -> . while
    (9) linha -> . return
    (10) linha -> . var_assign
    (11) linha -> . expression
    (14) funcao -> . NAME LPAR values RPAR
    (23) if -> . IF LPAR bloco RPAR LCHAVES bloco RCHAVES
    (24) while -> . WHILE LPAR bloco RPAR LCHAVES bloco RCHAVES
    (12) return -> . RETURN term COMMA return
    (13) return -> . RETURN term
    (25) var_assign -> . NAME EQUALS term
    (26) var_assign -> . NAME EQUALS funcao
    (22) expression -> . term
    (27) term -> . term EXPONENT term
    (28) term -> . term MULTIPLY term
    (29) term -> . term DIVIDE term
    (30) term -> . term DIVIDEINT term
    (31) term -> . term QUOTIENT term
    (32) term -> . term MINUS term
    (33) term -> . term PLUS term
    (34) term -> . term IGUAL term
    (35) term -> . term MENOR term
    (36) term -> . term MAIOR term
    (37) term -> . term MENORIGUAL term
    (38) term -> . term MAIORIGUAL term
    (39) term -> . factor
    (47) term -> . NAME
    (40) factor -> . nterm
    (41) factor -> . NUMBER
    (42) factor -> . positive
    (43) factor -> . negative
    (46) nterm -> . LPAR term RPAR
    (45) positive -> . PLUS term
    (44) negative -> . MINUS term

    NAME            shift and go to state 6
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    NUMBER          shift and go to state 23
    LPAR            shift and go to state 7
    PLUS            shift and go to state 20
    MINUS           shift and go to state 19

    bloco                          shift and go to state 58
    linha                          shift and go to state 8
    funcao                         shift and go to state 9
    if                             shift and go to state 10
    while                          shift and go to state 11
    return                         shift and go to state 12
    var_assign                     shift and go to state 13
    expression                     shift and go to state 14
    term                           shift and go to state 18
    factor                         shift and go to state 21
    nterm                          shift and go to state 22
    positive                       shift and go to state 24
    negative                       shift and go to state 25

state 33

    (24) while -> WHILE LPAR . bloco RPAR LCHAVES bloco RCHAVES
    (4) bloco -> . linha ENDLINE bloco
    (5) bloco -> . linha
    (6) linha -> . funcao
    (7) linha -> . if
    (8) linha -> . while
    (9) linha -> . return
    (10) linha -> . var_assign
    (11) linha -> . expression
    (14) funcao -> . NAME LPAR values RPAR
    (23) if -> . IF LPAR bloco RPAR LCHAVES bloco RCHAVES
    (24) while -> . WHILE LPAR bloco RPAR LCHAVES bloco RCHAVES
    (12) return -> . RETURN term COMMA return
    (13) return -> . RETURN term
    (25) var_assign -> . NAME EQUALS term
    (26) var_assign -> . NAME EQUALS funcao
    (22) expression -> . term
    (27) term -> . term EXPONENT term
    (28) term -> . term MULTIPLY term
    (29) term -> . term DIVIDE term
    (30) term -> . term DIVIDEINT term
    (31) term -> . term QUOTIENT term
    (32) term -> . term MINUS term
    (33) term -> . term PLUS term
    (34) term -> . term IGUAL term
    (35) term -> . term MENOR term
    (36) term -> . term MAIOR term
    (37) term -> . term MENORIGUAL term
    (38) term -> . term MAIORIGUAL term
    (39) term -> . factor
    (47) term -> . NAME
    (40) factor -> . nterm
    (41) factor -> . NUMBER
    (42) factor -> . positive
    (43) factor -> . negative
    (46) nterm -> . LPAR term RPAR
    (45) positive -> . PLUS term
    (44) negative -> . MINUS term

    NAME            shift and go to state 6
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    NUMBER          shift and go to state 23
    LPAR            shift and go to state 7
    PLUS            shift and go to state 20
    MINUS           shift and go to state 19

    bloco                          shift and go to state 59
    linha                          shift and go to state 8
    funcao                         shift and go to state 9
    if                             shift and go to state 10
    while                          shift and go to state 11
    return                         shift and go to state 12
    var_assign                     shift and go to state 13
    expression                     shift and go to state 14
    term                           shift and go to state 18
    factor                         shift and go to state 21
    nterm                          shift and go to state 22
    positive                       shift and go to state 24
    negative                       shift and go to state 25

state 34

    (12) return -> RETURN term . COMMA return
    (13) return -> RETURN term .
    (27) term -> term . EXPONENT term
    (28) term -> term . MULTIPLY term
    (29) term -> term . DIVIDE term
    (30) term -> term . DIVIDEINT term
    (31) term -> term . QUOTIENT term
    (32) term -> term . MINUS term
    (33) term -> term . PLUS term
    (34) term -> term . IGUAL term
    (35) term -> term . MENOR term
    (36) term -> term . MAIOR term
    (37) term -> term . MENORIGUAL term
    (38) term -> term . MAIORIGUAL term

    COMMA           shift and go to state 60
    ENDLINE         reduce using rule 13 (return -> RETURN term .)
    $end            reduce using rule 13 (return -> RETURN term .)
    RPAR            reduce using rule 13 (return -> RETURN term .)
    RCHAVES         reduce using rule 13 (return -> RETURN term .)
    EXPONENT        shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    DIVIDEINT       shift and go to state 38
    QUOTIENT        shift and go to state 39
    MINUS           shift and go to state 40
    PLUS            shift and go to state 41
    IGUAL           shift and go to state 42
    MENOR           shift and go to state 43
    MAIOR           shift and go to state 44
    MENORIGUAL      shift and go to state 45
    MAIORIGUAL      shift and go to state 46


state 35

    (27) term -> term EXPONENT . term
    (27) term -> . term EXPONENT term
    (28) term -> . term MULTIPLY term
    (29) term -> . term DIVIDE term
    (30) term -> . term DIVIDEINT term
    (31) term -> . term QUOTIENT term
    (32) term -> . term MINUS term
    (33) term -> . term PLUS term
    (34) term -> . term IGUAL term
    (35) term -> . term MENOR term
    (36) term -> . term MAIOR term
    (37) term -> . term MENORIGUAL term
    (38) term -> . term MAIORIGUAL term
    (39) term -> . factor
    (47) term -> . NAME
    (40) factor -> . nterm
    (41) factor -> . NUMBER
    (42) factor -> . positive
    (43) factor -> . negative
    (46) nterm -> . LPAR term RPAR
    (45) positive -> . PLUS term
    (44) negative -> . MINUS term

    NAME            shift and go to state 30
    NUMBER          shift and go to state 23
    LPAR            shift and go to state 7
    PLUS            shift and go to state 20
    MINUS           shift and go to state 19

    term                           shift and go to state 61
    factor                         shift and go to state 21
    nterm                          shift and go to state 22
    positive                       shift and go to state 24
    negative                       shift and go to state 25

state 36
